--- a/src/components/page-blocks/_footer.html
+++ b/src/components/page-blocks/_footer.html
@@ -1,1 +1,27 @@
-<footer class="footer"></footer>
+<footer class="footer">
+	<div class="container">
+		<div class="footer__nav">
+
+			<ul class="menu">
+				<li class="menu__item">
+					<a href="#">Privacy</a>
+				</li>
+				<li class="menu__item">
+					<a href="#">Terms of use</a>
+				</li>
+				<li class="menu__item">
+					<a href="#">Feedback</a>
+				</li>
+			</ul>
+
+			<span class="footer__copy">
+				© oizglitiba 2021
+			</span>
+
+			<div class="footer__label">
+				Izstrādāts
+			</div>
+
+		</div>
+	</div>
+</footer>
