--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="container">
-		<div class="header__nav">
+		<nav class="header__nav">
 			<a class="logo" href="#">
 				<img src="img/logo.svg" alt="logo">
 			</a>
@@ -71,6 +71,10 @@
 
 			</div>
 
-		</div>
+			<button class="header__burger">
+				<span></span>
+			</button>
+
+		</nav>
 	</div>
 </header>
