--- a/src/scss/bem-blocks/_menu.scss
+++ b/src/scss/bem-blocks/_menu.scss
@@ -3,8 +3,25 @@
     align-items: center;
 }
 
+.footer .menu {
+    @include _630 {
+        margin-bottom: 40px;
+    }
+}
+
 .menu li {
     margin-right: 40px;
+}
+
+.header .menu li {
+    @include _979 {
+        margin-right: 25px;
+    }
+
+    @include _768 {
+        margin-right: 0;
+        margin-bottom: 24px;
+    }
 }
 
 .menu li:last-child {
@@ -18,10 +35,31 @@
     @extend %montserrat-500;
     border-radius: 8px;
     transition: background-color 0.3s ease, color 0.3s ease;
+
+    @include _979 {
+        padding: 7px 3px;
+        font-size: 13px;
+    }
+
+    @include _768 {
+        font-size: 14px;
+    }
 }
 
 .menu a:hover {
     background-color: $accent;
     color: white;
     transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.footer__nav .menu__item:last-child {
+    @include _768 {
+        display: none;
+    }
+}
+
+.footer__nav .menu__item:nth-last-child(2) {
+    @include _768 {
+        margin-right: 0;
+    }
 }
