--- a/src/components/page-blocks/_welcome.html
+++ b/src/components/page-blocks/_welcome.html
@@ -7,7 +7,7 @@
 				<span class="welcome__subject">Digital plugin library</span>
 
 				<h1 class="welcome__title">
-					Atrodi savu digitālo rīku
+					Atrodi savu <br> digitālo rīku
 				</h1>
 
 				<p class="welcome__descr">
@@ -18,12 +18,20 @@
 
 				<div class="welcome__materials materials">
 					<div class="materials__promo">
-						<div class="materials__content">
-							<span class="materials__label">Best materials</span>
-							<span class="materials__name">Educational materials</span>
-							<a class="materials__promo-link button" href="#">Explore</a>
+						<div class="materials__box">
+
+							<div class="materials__content">
+								<span class="materials__label">Best materials</span>
+								<span class="materials__name">Educational materials</span>
+								<a class="materials__promo-link button" href="#">Explore</a>
+							</div>
+
+							<img class="materials__image" src="img/doc-icons.svg" alt="images">
 						</div>
-						<img class="materials__image" src="img/doc-icons.svg" alt="images">
+
+
+						<a class="materials__promo-link materials__promo-link--mobile button" href="#">Explore</a>
+
 					</div>
 
 					<ul class="materials__list">
