--- a/src/scss/bem-blocks/_demo-instruments.scss
+++ b/src/scss/bem-blocks/_demo-instruments.scss
@@ -1,8 +1,13 @@
 .demo-instruments {
     margin-bottom: 40px;
+    height: 192px;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 3px 28px rgba(0, 0, 0, 0.06);
     border-radius: 16px;
+}
+
+.demo-instruments__img {
+    width: 100%;
 }
