--- a/src/scss/bem-blocks/_instrument.scss
+++ b/src/scss/bem-blocks/_instrument.scss
@@ -6,6 +6,8 @@
     justify-content: center;
     align-items: center;
     background-color: #f0f0f0;
+    border: 1px solid rgba(240, 240, 240, 0.7);
+    border-radius: 16px;
     cursor: pointer;
 
     &--catalog {
@@ -15,9 +17,60 @@
         height: 240px;
         &:nth-child(4n) {
             margin-right: 0;
+            @include _1366 {
+                margin-right: 24px;
+            }
+
+            @include _768 {
+                margin-right: 0;
+            }
         }
 
         &:nth-last-child(- n + 4) {
+            margin-bottom: 0;
+            @include _1366 {
+                margin-bottom: 24px;
+            }
+        }
+
+        @include _1366 {
+            &:nth-last-child(- n + 2) {
+                margin-bottom: 0;
+                @include _630 {
+                    margin-bottom: 24px;
+                }
+            }
+        }
+
+        @include _630 {
+            &:nth-last-child(- n + 1) {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+    @include _1366 {
+        margin-bottom: 24px;
+        margin-right: 24px;
+    }
+
+    @include _414 {
+        max-width: 100%;
+        width: 100%;
+        height: 160px;
+        margin-right: 0;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+
+.catalog__list .instrument {
+    @include _414 {
+        margin-bottom: 32px;
+
+        &:last-child {
             margin-bottom: 0;
         }
     }
@@ -25,7 +78,6 @@
 
 .instrument__open {
     position: absolute;
-    // z-index: 2;
     top: 0;
     left: 0;
     width: 100%;
