--- a/src/scss/bem-blocks/_instruments.scss
+++ b/src/scss/bem-blocks/_instruments.scss
@@ -1,9 +1,33 @@
+.instruments {
+    @include _768 {
+        border-top: 1px solid #cccccc;
+    }
+}
+
 .instruments__inner {
-    padding: 80px 0 120px;
+    padding: 70px 0 114px;
     border-top: 1px solid #cccccc;
+
+    @include _768 {
+        padding: 40px 0 48px;
+        border-top: none;
+    }
+}
+
+.instruments__title {
+    margin-bottom: 55px;
 }
 
 .instruments__list {
     display: flex;
     justify-content: space-between;
+
+    @include _1366 {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    @include _414 {
+        justify-content: center;
+    }
 }
