--- a/src/scss/bem-blocks/_popup.scss
+++ b/src/scss/bem-blocks/_popup.scss
@@ -39,6 +39,7 @@
     transform: translate(0px, -100%);
     opacity: 0;
     transition: all 0.8s ease 0s;
+    border-radius: 16px;
 }
 
 .popup__close {
