--- a/src/scss/bem-blocks/_search.scss
+++ b/src/scss/bem-blocks/_search.scss
@@ -1,5 +1,6 @@
 .search {
     margin-bottom: 40px;
+    max-width: 417px;
     box-shadow: 0px 3px 28px rgba(0, 0, 0, 0.06);
     border-radius: 0px 0px 16px 16px;
 }
@@ -12,7 +13,7 @@
 
 .search__query {
     padding-left: 38px;
-    padding-right: 48px;
+    padding-right: 30px;
     height: 48px;
     display: flex;
     align-items: center;
@@ -22,6 +23,7 @@
     background-repeat: no-repeat;
     background-position: 14px center;
     border-right: none;
+    white-space: nowrap;
 }
 
 .search__query.--svg__zoom {
@@ -29,11 +31,11 @@
 }
 
 .search__results {
-    padding: 22px 16px;
+    padding: 16px;
 }
 
 .search__result {
-    margin-bottom: 15px;
+    margin-bottom: 11px;
     display: flex;
     justify-content: space-between;
 }
