--- a/src/scss/bem-blocks/_sidebar.scss
+++ b/src/scss/bem-blocks/_sidebar.scss
@@ -2,6 +2,57 @@
     margin-right: 32px;
     max-width: 240px;
     width: 100%;
+
+    @include _768 {
+        position: fixed;
+        z-index: 7;
+        top: 0;
+        left: 0;
+        max-width: 100%;
+        background-color: #ffffff;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    &.open {
+        opacity: 1;
+        visibility: visible;
+        overflow: hidden;
+        padding: 24px 16px;
+
+        .catalog__search--mobile {
+            display: block;
+        }
+
+        .sidebar__title {
+            display: none;
+        }
+
+        .sidebar__title-search {
+            margin-bottom: 24px;
+            display: block;
+        }
+
+        .catalog__search-btn {
+            display: none;
+        }
+
+        .catalog__search-enter {
+            margin-bottom: 24px;
+            width: 100%;
+            margin-right: 0;
+        }
+
+        .catalog__search-category {
+            margin-bottom: 64px;
+        }
+
+        .sidebar__show-results {
+            margin-top: 64px;
+            display: block;
+            width: 100%;
+        }
+    }
 }
 
 .sidebar__title {
@@ -9,10 +60,17 @@
     @extend %montserrat-600;
 }
 
+.sidebar__title-search {
+    display: none;
+    @extend %montserrat-700;
+    font-size: 24px;
+}
+
 .sidebar-single__show {
     margin-bottom: 16px;
     display: flex;
     justify-content: space-between;
+    width: 240px;
     @extend %montserrat-500;
     cursor: pointer;
 }
@@ -22,4 +80,57 @@
     &.show {
         display: block;
     }
+}
+
+.sidebar__close {
+    @include no-btn;
+    outline: transparent;
+    display: none;
+
+    @include _768 {
+        position: absolute;
+        top: 28px;
+        right: 16px;
+        z-index: 8;
+        display: block;
+        width: 18px;
+        height: 14px;
+        cursor: pointer;
+        &::before,
+        &::after,
+        & span {
+            position: absolute;
+            left: 0;
+            height: 2px;
+            width: 100%;
+            transition: all 0.3s ease 0s;
+            background-color: black;
+        }
+
+        &::before,
+        &::after {
+            content: '';
+        }
+
+        & span {
+            transform: scale(0);
+        }
+
+        &::before {
+            top: 50%;
+            transform: rotate(-45deg) translate(0px, -50%);
+            background-color: #333333;
+        }
+
+        &::after {
+            bottom: 40%;
+            transform: rotate(45deg) translate(0px, 50%);
+            background-color: #333333;
+        }
+    }
+}
+
+.sidebar__show-results {
+    display: none;
+    padding: 12px 10px;
 }
