--- a/src/scss/page-blocks/_welcome.scss
+++ b/src/scss/page-blocks/_welcome.scss
@@ -1,14 +1,35 @@
 .welcome {
-    padding: 70px 0 90px;
+    padding: 70px 0 86px;
+
+    @include _768 {
+        padding: 24px 0 80px;
+    }
 }
 
 .welcome__inner {
     display: flex;
     justify-content: space-between;
+    @include _1366 {
+        flex-direction: column;
+    }
 }
 
 .welcome__content {
     max-width: 512px;
+    @include _1366 {
+        margin: 0 auto 70px;
+    }
+
+    @include _768 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    @include _630 {
+        margin: 0;
+        max-width: 100%;
+    }
 }
 
 .welcome__subject {
@@ -17,6 +38,7 @@
     display: inline-block;
     color: black;
     @extend %montserrat-600;
+    font-size: 14px;
     background-image: url('../img/decor.png');
     background-repeat: no-repeat;
     background-position: right 12px center;
@@ -26,19 +48,42 @@
 
 .welcome__title {
     margin-bottom: 40px;
-    max-width: 400px;
     @extend %montserrat-700;
     color: black;
     font-size: 56px;
     line-height: 1.2;
+
+    @include _768 {
+        margin-bottom: 24px;
+        font-size: 32px;
+    }
 }
 
 .welcome__descr {
     margin-bottom: 80px;
     max-width: 370px;
     font-size: 14px;
+    line-height: 1.5;
+    @extend %montserrat-500;
+
+    @include _768 {
+        text-align: center;
+    }
+}
+
+.welcome__materials {
+    max-width: 100%;
+    width: 100%;
 }
 
 .welcome__steps {
+    padding-top: 15px;
     display: flex;
+    @include _1366 {
+        margin: 0 auto;
+    }
+
+    @include _768 {
+        display: none;
+    }
 }
